--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -4,147 +4,114 @@
         <app-header></app-header>
         <section>
             <div class="content">
-                <form class="kanban-form">
-                    <h1>Add Task</h1>
-                    <div class="form-title div-cont">
-                        <label> Title<span class="required-asterisk">*</span> </label>
-                        <input [(ngModel)]="copyDummyTasks[currentIndex].title" placeholder="Enter a title"
-                            type="text" />
-                    </div>
-                    <div class="form-description div-cont">
-                        <label> Description<span class="required-asterisk">*</span> </label>
-                        <textarea [(ngModel)]="copyDummyTasks[currentIndex].description"
-                            placeholder="Enter a Description " name="" id=""></textarea>
-                    </div>
-                    <div class="form-date div-cont">
-                        <label> Due date<span class="required-asterisk">*</span> </label>
-                        <input [(ngModel)]="copyDummyTasks[currentIndex].dueDate" type="date" />
-                    </div>
-                    <label class="form-label">
-                        This field is required<span class="required-asterisk">*</span>
-                    </label>
-                </form>
-
-                <div class="line"></div>
-                <div class="right-addtask">
-                    <div class="kanban-addtask-priority">
-                        <p>Priority</p>
-                        <div class="priority-buttons">
-                            <button (click)="changeToUrgent(); debugPriority()"
-                                [disabled]="copyDummyTasks[currentIndex].priority === 'Urgent'" [class.active-urgent]="
-                  copyDummyTasks[currentIndex].priority === 'Urgent'
-                ">
-                                <span>Urgent</span>
-                                @if(copyDummyTasks[currentIndex].priority !== 'Urgent'){
-                                <img src="assets/img/kanban-edit-overlay/urgent-arrow.svg" alt="" />
-                                }@else {
-                                <img src="assets/img/kanban-edit-overlay/white-urgent.svg" alt="" />
-                                }
-                            </button>
-
-                            <button (click)="changeToMedium(); debugPriority()"
-                                [disabled]="copyDummyTasks[currentIndex].priority === 'Medium'" [class.active-medium]="
-                  copyDummyTasks[currentIndex].priority === 'Medium'
-                ">
-                                <span>Medium</span>
-                                @if(copyDummyTasks[currentIndex].priority !== 'Medium'){
-                                <img src="assets/img/kanban-edit-overlay/medium-arrow.svg" alt="" />
-                                }@else {
-                                <img src="assets/img/kanban-edit-overlay/white-medium.svg" alt="" />
-                                }
-                            </button>
-
-                            <button (click)="changeToLow(); debugPriority()"
-                                [disabled]="copyDummyTasks[currentIndex].priority === 'Low'" [class.active-low]="
-                  copyDummyTasks[currentIndex].priority === 'Low'
-                ">
-                                <span>Low</span>
-                                @if(copyDummyTasks[currentIndex].priority !== 'Low'){
-                                <img src="assets/img/kanban-edit-overlay/low-arrow.svg" alt="" />
-                                }@else{
-                                <img src="assets/img/kanban-edit-overlay/white-low.svg" alt="" />
-                                }
-                            </button>
-                        </div>
-                    </div>
-                    <div class="kanban-assigned-to">
-                        <span class="assigned-span">Assigned to</span>
-                        <div class="all-user-container">
-                            <select class="select-to-assign" required name="name" id="" multiple>
-                                @for (user of overlayState.contactList; track $index) {
-                                <option value="$index + 1">
-                                    {{ user.firstName }} {{ user.lastName }}
-                                </option>
-                                }
-                            </select>
-                            <div class="list-of-members">
-                                <div class="kanban-overlay-subtask">
-                                    <span class="subtask-span">Subtask</span>
-                                    <div class="subtaskfield" (click)="$event.stopPropagation();">
-                                        <input [(ngModel)]="subtaskString" type="text" (focus)="isInputFocused = true"
-                                            placeholder="Add a subtask">
-                                        @if(!isInputFocused){
-                                        <div class="add">
-                                            <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="" />
-                                        </div>
-                                        }@else {
-                                        <div class="submit-cancel">
-                                            <button (click)="emptySubtask()">
-                                                <img src="assets/img/kanban-edit-overlay/exit-subtask.svg" alt="">
-                                            </button>
-
-                                            <div class="grey-line"></div>
-                                            <button (click)="pushToSubtask()">
-                                                <img src="assets/img/kanban-edit-overlay/checkmark-subtask.svg" alt="">
-                                            </button>
-                                        </div>
-                                        }
-                                    </div>
-                                    <!-- <div class="each-sub-task">
-                        @for (item of dummyTasks[currentIndex].subTask; track $index) {
-                            @if (isListClicked === 'list') {
-                                <li (dblclick)="isListClicked = 'activateTextarea'">{{ dummyTasks[currentIndex].subTask[$index]}}</li>
-                            }@else {
-                                
-                            }
+                <div class="left-addtask">
+                    <div class="left-content-wrapper">
+                        <form class="kanban-form">
+                            <h1>Add Task</h1>
+                            <div class="form-title div-cont">
+                                <label>
+                                    Title<span class="required-asterisk">*</span>
+                                </label>
+                                <input [(ngModel)]="selectedContacts[currentIndex].title" name="title"
+                                    placeholder="Enter a title" type="text" />
+                            </div>
+                            <div class="form-description div-cont">
+                                <label>
+                                    Description<span class="required-asterisk">*</span>
+                                </label>
+                                <textarea placeholder="Enter a Description " name="" id=""></textarea>
+                            </div>
+                            <div class="form-date div-cont">
+                                <label>
+                                    Due date<span class="required-asterisk">*</span>
+                                </label>
+                                <input type="date" />
+                            </div>
                             
-                        }
-                    </div> -->
-                                    <div class="each-sub-task"
-                                        *ngFor="let item of dummyTasks[currentIndex].subTask; let i = index">
-                                        <span class="subtask-text" (dblclick)="isListClicked = 'activateTextarea'">
-                                            {{ item }}
-                                        </span>
+                        </form>
+                    </div>
+                </div>
+                <label class="form-label">
+                                This field is required<span class="required-asterisk">*</span>
+                            </label>
+                <div class="line"></div>
 
-                                        <div class="edit-subtask" (click)="editSubtask(i)">
-                                            <img src="assets/img/info-screen/edit.svg" alt="Edit">
+
+
+                <div class="right-addtask">
+                    <div class="right-content-wrapper">
+                        <div class="kanban-addtask-priority">
+                            <p>Priority</p>
+                            <div class="priority-buttons">
+                                <button (click)="changeToUrgent()"
+                                    [class.active-urgent]="selectedContacts[currentIndex].priority === 'Urgent'">
+                                    <span>Urgent</span>
+                                    @if(selectedContacts[currentIndex].priority !== 'Urgent'){
+                                    <img src="assets/img/kanban-edit-overlay/urgent-arrow.svg" alt="" />
+                                    } @else {
+                                    <img src="assets/img/kanban-edit-overlay/white-urgent.svg" alt="" />
+                                    }
+                                </button>
+
+                                <button (click)="changeToMedium()"
+                                    [class.active-medium]="selectedContacts[currentIndex].priority === 'Medium'">
+                                    <span>Medium</span>
+                                    @if(selectedContacts[currentIndex].priority !== 'Medium'){
+                                    <img src="assets/img/kanban-edit-overlay/medium-arrow.svg" alt="" />
+                                    } @else {
+                                    <img src="assets/img/kanban-edit-overlay/white-medium.svg" alt="" />
+                                    }
+                                </button>
+
+                                <button (click)="changeToLow()"
+                                    [class.active-low]="selectedContacts[currentIndex].priority === 'Low'">
+                                    <span>Low</span>
+                                    @if(selectedContacts[currentIndex].priority !== 'Low'){
+                                    <img src="assets/img/kanban-edit-overlay/low-arrow.svg" alt="" />
+                                    } @else {
+                                    <img src="assets/img/kanban-edit-overlay/white-low.svg" alt="" />
+                                    }
+                                </button>
+                            </div>
+                        </div>
+                        <div class="kanban-assigned-to">
+                            <span class="assigned-span">Assigned to</span>
+                            <div class="all-user-container">
+                                <div class="select-to-assign">
+                                    <span>Select contacts to assign</span>
+                                    <img src="assets/img/kanban-edit-overlay/arrow-down.svg" alt="select User" />
+                                </div>
+                                <div class="list-of-members">
+                                    <div class="kanban-overlay-subtask">
+                                        <span class="subtask-span">Subtask</span>
+                                        <div class="subtaskfield">
+                                            Add new subtask
+                                            <img src="assets/img/kanban-edit-overlay/plus-zichen.svg" alt="Add new" />
                                         </div>
-
-                                        <div class="delete-subtask" (click)="deleteSubtask(i)">
-                                            <img src="assets/img/info-screen/delete.svg" alt="Delete">
+                                        <div class="each-sub-task">
+                                            <button class="clear">
+                                                Clear
+                                                <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path
+                                                        d="M16 17.4L11.1 22.3C10.9167 22.4834 10.6834 22.575 10.4 22.575C10.1167 22.575 9.88338 22.4834 9.70005 22.3C9.51672 22.1167 9.42505 21.8834 9.42505 21.6C9.42505 21.3167 9.51672 21.0834 9.70005 20.9L14.6 16L9.70005 11.1C9.51672 10.9167 9.42505 10.6834 9.42505 10.4C9.42505 10.1167 9.51672 9.88338 9.70005 9.70005C9.88338 9.51672 10.1167 9.42505 10.4 9.42505C10.6834 9.42505 10.9167 9.51672 11.1 9.70005L16 14.6L20.9 9.70005C21.0834 9.51672 21.3167 9.42505 21.6 9.42505C21.8834 9.42505 22.1167 9.51672 22.3 9.70005C22.4834 9.88338 22.575 10.1167 22.575 10.4C22.575 10.6834 22.4834 10.9167 22.3 11.1L17.4 16L22.3 20.9C22.4834 21.0834 22.575 21.3167 22.575 21.6C22.575 21.8834 22.4834 22.1167 22.3 22.3C22.1167 22.4834 21.8834 22.575 21.6 22.575C21.3167 22.575 21.0834 22.4834 20.9 22.3L16 17.4Z"
+                                                        fill="currentColor" />
+                                                </svg>
+                                            </button>
+                                            <button class="create-task" (click)="debug()">
+                                                Create Task
+                                                <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
+                                            </button>
                                         </div>
                                     </div>
-                                </div>
-
-                                <div class="confirm-clear-add-button">
-                                    <button class="clear" (click)="emptySubtask()">
-                                        Clear
-                                        <svg width="32" height="32" viewBox="0 0 32 32" fill="currentColor"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M16 17.4L11.1 22.3C10.9167 22.4834 10.6834 22.575 10.4 22.575C10.1167 22.575 9.88338 22.4834 9.70005 22.3C9.51672 22.1167 9.42505 21.8834 9.42505 21.6C9.42505 21.3167 9.51672 21.0834 9.70005 20.9L14.6 16L9.70005 11.1C9.51672 10.9167 9.42505 10.6834 9.42505 10.4C9.42505 10.1167 9.51672 9.88338 9.70005 9.70005C9.88338 9.51672 10.1167 9.42505 10.4 9.42505C10.6834 9.42505 10.9167 9.51672 11.1 9.70005L16 14.6L20.9 9.70005C21.0834 9.51672 21.3167 9.42505 21.6 9.42505C21.8834 9.42505 22.1167 9.51672 22.3 9.70005C22.4834 9.88338 22.575 10.1167 22.575 10.4C22.575 10.6834 22.4834 10.9167 22.3 11.1L17.4 16L22.3 20.9C22.4834 21.0834 22.575 21.3167 22.575 21.6C22.575 21.8834 22.4834 22.1167 22.3 22.3C22.1167 22.4834 21.8834 22.575 21.6 22.575C21.3167 22.575 21.0834 22.4834 20.9 22.3L16 17.4Z"
-                                                fill="currentColor" />
-                                        </svg>
-                                    </button>
-                                    <button class="create-task" (click)="pushToSubtask()">
-                                        Create Task
-                                        <img src="assets/img/add-contacts/check.svg" alt="Create Task" />
-                                    </button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+
+
             </div>
         </section>
     </div>
