--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -23,360 +23,254 @@ section {
   width: 100%;
   height: 92dvh;
 
-  .kanban-form {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    gap: 30px;
-    padding-left: 8em;
-    padding-right: 5em;
-
-    h1 {
-      padding-top: 1.5em;
-      font-size: 6em;
-    }
-
-    label {
-      font-size: 1.6em;
-      margin-bottom: 0.3em;
-
-      .required-asterisk {
-        color: red;
-        margin-right: 1em;
-      }
-    }
-
-    .div-cont {
-      display: flex;
-      flex-direction: column;
-      min-height: 64px;
-
-      input,
-      textarea {
-        min-height: 48px;
-        border-radius: 15px;
-        padding: 0.5em;
-        font-size: 16px;
-        resize: none;
-        border: 2px solid rgba(0, 0, 0, 0.214);
-
-        &:focus {
-          border: 2px solid #29abe2;
-        }
-      }
-
-      textarea {
-        height: 84px;
-      }
-
-      span {
-        color: rgba(0, 0, 0, 0.746);
-        font-size: 18px;
-        margin-bottom: 0.3em;
-      }
-    }
-
-    .form-label {
-      position: absolute;
-      bottom: 3.5em;
-      font-size: 1.6em;
-      margin-right: 1.5em;
-    }
+  .form-label {
+    position: absolute;
+    font-size: 1.6em;
+    margin-bottom: 5em;
+    left: 1.5em;
+    bottom: 0;
   }
 
-  .kanban-addtask-priority {
-    width: 100%;
+  .left-addtask {
+    width: 49%;
+    _height: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    p {
-      font-size: 18px;
-      padding-left: 2em;
-      padding-top: 10.5em;
-      margin-bottom: 0.4em;
-    }
-
-    .priority-buttons {
+    .left-content-wrapper {
       display: flex;
-      justify-content: space-evenly;
-      margin-bottom: 4em;
-      padding-right: 8em;
+      flex-direction: column;
+      gap: 4em;
+      width: 80%;
 
-      .active-urgent {
-        background-color: #ff3d00;
-        color: white;
-      }
-      .active-medium {
-        background-color: #ffa800;
-        color: white;
-      }
-      .active-low {
-        background-color: #7ae229;
-        color: white;
-      }
-
-      button {
+      .kanban-form {
         display: flex;
-        gap: 5px;
-        background-color: white;
-        border: solid rgba(0, 0, 0, 0.049) 2px;
-        border-radius: 10px;
-        font-size: 20px;
-        padding: 10px 16px;
-        transition: box-shadow 0.3s ease;
+        flex-direction: column;
+        width: 100%;
+        gap: 30px;
 
-        img {
-          width: 20px;
+        h1 {
+          font-size: 6em;
         }
 
-        &:hover {
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        label {
+          font-size: 1.6em;
+          margin-bottom: 0.3em;
+
+          .required-asterisk {
+            color: red;
+            margin-right: 1em;
+          }
+        }
+
+        .div-cont {
+          display: flex;
+          flex-direction: column;
+          min-height: 64px;
+
+          input,
+          textarea {
+            min-height: 48px;
+            border-radius: 15px;
+            padding: 0.5em;
+            font-size: 16px;
+            resize: none;
+            border: 2px solid rgba(0, 0, 0, 0.049);
+
+            &:focus {
+              border: 2px solid #29abe2;
+            }
+          }
+
+          textarea {
+            height: 84px;
+          }
+
+          span {
+            color: rgba(0, 0, 0, 0.746);
+            font-size: 18px;
+          }
         }
       }
     }
   }
 }
 
-.right-addtask {
-  width: 50%;
+.grey-line {
+  width: 2px;
+  height: 24px;
+  background-color: rgba(196, 196, 196, 0.568);
+  margin: 0px 2px;
+}
 
-  .kanban-assigned-to {
+.right-addtask {
+  width: 49%;
+  _height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+
+  .right-content-wrapper {
     display: flex;
     flex-direction: column;
+    width: 80%;
+     top: 8em;
 
-    .assigned-span {
-      font-size: 1.6em;
-      padding-left: 2.7em;
-      padding-bottom: 0.4em;
+    .kanban-addtask-priority {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      p {
+        font-size: 18px;
+        margin-bottom: 0.4em;
+      }
+
+      .priority-buttons {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 4em;
+
+        .active-urgent {
+          background-color: #ff3d00;
+          color: white;
+        }
+        .active-medium {
+          background-color: #ffa800;
+          color: white;
+        }
+        .active-low {
+          background-color: #7ae229;
+          color: white;
+        }
+
+        button {
+          display: flex;
+          gap: 0.4em;
+          background-color: white;
+          border: solid rgba(0, 0, 0, 0.049) 2px;
+          border-radius: 10px;
+          font-size: 20px;
+          padding: 10px 16px;
+          transition: box-shadow 0.3s ease;
+
+          img {
+            width: 20px;
+          }
+
+          &:hover {
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          }
+        }
+      }
     }
 
-    .all-user-container {
+    .kanban-assigned-to {
+      display: flex;
+      flex-direction: column;
       width: 100%;
-      padding-left: 4em;
-      padding-right: 12em;
 
-      .select-to-assign {
+      .assigned-span {
+        font-size: 1.6em;
+        padding-bottom: 0.4em;
+      }
+
+      .all-user-container {
+        width: 100%;
+
+        .select-to-assign {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          background-color: white;
+          border: 2px rgba(0, 0, 0, 0.049) solid;
+          padding: 1em;
+          border-radius: 10px;
+          height: 48px;
+          font-size: 16px;
+
+          &:hover {
+            border: 2px rgba(0, 0, 0, 0.694) solid;
+          }
+        }
+      }
+    }
+
+    .kanban-overlay-subtask {
+      width: 100%;
+      padding-top: 3em;
+
+      .subtask-span {
+        font-size: 16px;
+        padding-bottom: 0.4em;
+      }
+
+      .subtaskfield {
         display: flex;
         align-items: center;
         justify-content: space-between;
         background-color: white;
-        border: 2px rgba(0, 0, 0, 0.346) solid;
         padding: 1em;
-        border-radius: 10px;
-        height: 48px;
         font-size: 16px;
+        height: 48px;
+        border: 2px solid rgba(0, 0, 0, 0.049);
+        border-radius: 10px;
+      }
+    }
+
+    .each-sub-task {
+      display: flex;
+      justify-content: flex-end;
+      margin-top: 10em;
+      gap: 1.5em;
+
+      .clear {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: solid rgba(0, 0, 0, 0.049) 2px;
+        border-radius: 10px;
+        font-size: 1.8em;
+        padding: 8px 10px;
+        transition: box-shadow 0.3s ease;
+
+        img {
+          margin-left: 0.5em;
+        }
 
         &:hover {
-          border: 2px rgba(0, 0, 0, 0.694) solid;
-        }
-      }
-    }
-  }
-
-  .kanban-overlay-subtask {
-    width: 100%;
-    padding-top: 3em;
-
-    .subtask-span {
-      font-size: 16px;
-      padding-bottom: 0.4em;
-    }
-
-    .subtaskfield {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      border: 2px solid rgba(0, 0, 0, 0.151);
-      border-radius: 10px;
-      width: 100%;
-      height: 48px;
-      input {
-        width: 100%;
-        padding: 1em;
-        height: 100%;
-        border: transparent;
-        font-size: 16px;
-        background-color: transparent;
-        &:focus {
-          border-radius: 10px;
+          color: #29abe2;
+          border: 2px #29abe2 solid;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
       }
 
-      button {
-        border: none;
-        background-color: transparent;
-      }
-
-      .add,
-      .submit-cancel {
+      .create-task {
+        color: white;
         display: flex;
+        justify-content: center;
         align-items: center;
-        position: absolute;
-        right: 1em;
-        cursor: pointer;
-      }
-      .add {
-        height: 100%;
+        background-color: #2a3647;
+        border: solid rgba(0, 0, 0, 0.049) 2px;
+        border-radius: 10px;
+        font-size: 1.8em;
+        padding: 10px 18px;
+        transition: box-shadow 0.3s ease;
+
         img {
-          &:hover {
-            background-color: rgba(0, 0, 0, 0.091);
-            border-radius: 50px;
-          }
+          margin-left: 0.5em;
+        }
+
+        &:hover {
+          background-color: #29abe2;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         }
       }
-      .submit-cancel {
-        img {
-          &:hover {
-            background-color: rgba(0, 0, 0, 0.091);
-            border-radius: 50px;
-          }
-        }
-        .grey-line {
-          width: 2px;
-          height: 24px;
-          background-color: rgba(196, 196, 196, 0.568);
-          margin: 0px 2px;
-        }
-      }
-    }
-  }
-}
-
-
-
-// .each-sub-task {
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     _border: 2px solid rgba(0, 0, 0, 0.151);
-//     _border-radius: 10px;
-//     width: 100%;
-//     height: 48px;
-//     padding: 1em;
-    
-//     .subtask-text {
-//         font-size: 16px;
-//         color: rgba(0, 0, 0, 0.746);
-//         width: calc(100% - 3em);
-//         overflow: hidden;
-//         text-overflow: ellipsis;
-//         white-space: nowrap;
-//     }
-    
-//     .edit-subtask {
-//         cursor: pointer;
-//         img {
-//             width: 20px;
-//             height: auto;
-//             &:hover {
-//                 background-color: rgba(0, 0, 0, 0.091);
-//                 border-radius: 50px;
-//             }
-//         }
-//     }
-
-
-//     .delete-subtask {
-//         cursor: pointer;
-//         img {
-//         width: 20px;
-//         height: auto;
-//         &:hover {
-//             background-color: rgba(0, 0, 0, 0.091);
-//             border-radius: 50px;
-//         }
-//         }
-//     }
-// }
-.each-sub-task {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 48px;
-  padding: 1em;
-  margin-bottom: 0.5em;
-  background-color: white;
-  
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.03);
-  }
-  
-  .subtask-text {
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.746);
-    width: calc(100% - 6em); // Platz für beide Icons
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    cursor: pointer;
-  }
-  
-  .edit-subtask, .delete-subtask {
-    cursor: pointer;
-    margin-left: 0.5em;
-    
-    img {
-      width: 20px;
-      height: 20px;
-      padding: 1px;
-      transition: background-color 0.2s;
-      
-      &:hover {
-        background-color: rgba(0, 0, 0, 0.091);
-        border-radius: 50%;
-      }
-    }
-  }
-}
-
-.confirm-clear-add-button {
-  display: flex;
-  justify-content: flex-end;
-  padding-top: 15em;
-
-  .clear {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: solid rgba(24, 24, 24, 0.411) 2px;
-    border-radius: 10px;
-    font-size: 1.8em;
-    padding: 8px 10px;
-    transition: box-shadow 0.3s ease;
-    margin-right: 1em;
-
-    img {
-      margin-left: 0.5em;
-    }
-
-    &:hover {
-      color: #29abe2;
-      border: 2px #29abe2 solid;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    }
-  }
-
-  .create-task {
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #2a3647;
-    border: solid rgba(0, 0, 0, 0.049) 2px;
-    border-radius: 10px;
-    font-size: 1.8em;
-    padding: 10px 18px;
-    transition: box-shadow 0.3s ease;
-
-    img {
-      margin-left: 0.5em;
-    }
-
-    &:hover {
-      background-color: #29abe2;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     }
   }
 }
