--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="user-feedback animate-overlay">
+                <div class="user-feedback">
                     <img src="assets/img/kanban-add/Frame 73.svg" alt="">
                 </div>
             </div>
