--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -4,24 +4,21 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100dvh;
     background-color: rgba(0, 0, 0, 0.205);
-    font-size: 10px;
+    
 
     .overlay-kanban-edit {
         display: flex;
         justify-content: center;
         position: absolute;
-        z-index: 100;
+        z-index: 1;
         border-radius: 25px;
         overflow: hidden; //damit border-radius geht
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 52em;
-        height: 92dvh;
+        width: 100%;
+        height: 80em;
+        font-size: 10px;
         background-color: white;
-        animation: fade-in-left-overlay 0.5s ease-in-out;
+
 
         .close-button {
             z-index: 5;
@@ -121,16 +118,19 @@
                         .active-urgent {
                             background-color: #FF3D00;
                             color: white;
+                            font-weight: 600;
                         }
 
                         .active-medium {
                             background-color: #ffa800;
                             color: white;
+                            font-weight: 600;
                         }
 
                         .active-low {
                             background-color: #7ae229;
                             color: white;
+                            font-weight: 600;
                         }
 
                         button {
@@ -145,6 +145,10 @@
 
                             &:hover {
                                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+                            }
+                            img{
+                                height: 24px;
+                                width: 24px;
                             }
                         }
                     }
