--- a/src/app/kanban/kanban-board/full-card/full-card.component.scss
+++ b/src/app/kanban/kanban-board/full-card/full-card.component.scss
@@ -1,6 +1,7 @@
 section {
   z-index: 5;
   font-size: 16px;
+  height: 800px;
 }
 
 .full-card-container {
@@ -13,6 +14,7 @@ section {
   background-color: rgb(255, 255, 255);
   height: auto;
   display: flex;
+  height: 100%;
   flex-direction: column;
   gap: 45px;
   box-shadow: 0 6px 0 rgba(0, 0, 0, 0.02);
@@ -26,6 +28,9 @@ section {
     @media (max-width: 474px) {
     width: auto;
     height: 744px;
+    .edit-delete-area{
+      padding-top: 20px;
+    }
   }
 
   &:hover {
@@ -211,6 +216,7 @@ section {
   display: flex;
   align-items: center;
   justify-content: end;
+  padding-top: 140px;
   gap: 10px;
 
   .edit-container {
